# sphinx-skills

./: .gitignore  LICENSE  README.md  apm.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  conf.py  index.md  make.bat
docs/skills/: index.md  myst-authoring.md  rst-to-myst.md  sphinx-build.md  sphinx-config.md  sphinx-init.md  sphinx-theme.md
scripts/: validate_skills.py
skills/myst-authoring/: SKILL.md
skills/rst-to-myst/: SKILL.md
skills/sphinx-build/: SKILL.md
skills/sphinx-config/: SKILL.md
skills/sphinx-init/: SKILL.md
skills/sphinx-theme/: SKILL.md
tests/: test_validate_skills.py
