[project]
name = "sphinx-skills-tools"
version = "0.1.0"
description = "Validation tooling for sphinx-skills package"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]
docs = [
    "linkify-it-py>=2.1.0",
    "myst-parser>=5.0.0",
    "shibuya>=2026.1.9",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
